fixed form spacing

--- a/index.css
+++ b/index.css
@@ -52,4 +52,5 @@ h2 {
 
 #create-task {
   margin: 20px;
+  margin-left: 0;
 }
